# fucktoid

./: README.hs
bf/: Lex.hs  Program.hs
bfcomp/: 99  99.c  LostKng  LostKng.c  README.md  bench  bench.c  bfcomp.cabal  dbfi  dbfi.c  easyopt  easyopt.c  euler1-5  euler1-5.c  euler5  euler5.c  factor  factor.c  factorial  factorial.c  hanoi  hanoi.bf  hanoi.c  hello  hello.bf  hello.c  hello2  life  life.c  long  long.bf  long.c  mandel  mandel.bf  mandel.c  mandel2  mandel2.c  obscure  obscure.c  pi  (+11 more)
bfcomp/app/: Main.hs
bfcomp/src/: BF.hs  BFComp.hs  BFComp2.hs  CompileOpt.hs  Optimize.hs  Unroll.hs
bfo/: Fucktoid.hs  Optimize.hs
freefuck/: freefuck.cabal
freefuck/app/: Main.hs
freefuck/src/: Fuck.hs
fuck/: doublecpy.bf  fuck.cabal
fuck/src/: BFComp.hs  Language.hs
omega/: __data  _data  data  data_bad  halts.js  omega.cabal  stack.yaml  tmp
omega/app/: Main.hs
omega/src/: Lib.hs
opti/: opti.cabal
opti/src/: Lib.hs
turing/: LostKng  LostKng.imo  dbfi  dbfi.c  factor  factor.c  factor2.c  hanoi  hanoi.c  hello  hello.c  hello2.c  long  long.c  long2.c  longO.c  mandel  mandel.c  mandel2  mandel2.c  mandelbroth  mandelbroth.c  mandelbroth.s  stack.yaml  tst.bf  tst.c  turing-exe.prof  turing.cabal
turing/app/: Main.hs
turing/src/: BFComp.hs  BFComp2.hs  BfVars.hs  BoolFuck.hs  Brainfuck.hs  Language.hs  MuFuck.hs  NanoFuck.hs  Proc.hs  Proc2.hs  ReversibleBitfuck.hs  ReversibleBrainfuck.hs  SmallFuck.hs
turing2/: README.md  figurehead.py  turing.cabal
turing2/app/: Main.hs
turing2/src/: Brainfuck.hs  Collatz.hs  Figurehead.hs  Fractran.hs  ResPlicate.hs  Tag.hs
μFuck/: Main.hs  hello.mu
