name:                bfcomp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/freefuck#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BFComp, BFComp2, Optimize, Unroll, BF, CompileOpt
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     -- , zipper
                     , lens
                     , monad-loops
                     , arithmoi
                     , digits
                     , containers
                     , vector
                     , process
                     , timeout
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
                     , FlexibleContexts
                     , LambdaCase
                     , ImplicitParams
                     , MultiWayIf
                     , ViewPatterns
                     , DoAndIfThenElse
                     , NondecreasingIndentation
                     , EmptyCase
                     , RecursiveDo
                     , TupleSections
                     , PostfixOperators
                     , ParallelListComp
                     , TransformListComp
                     , MonadComprehensions
                     , ApplicativeDo
                     , TypeOperators
                     , DuplicateRecordFields
                     -- , StandAloneDeriving
                     , DeriveGeneric
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , DeriveLift
                     , GeneralizedNewtypeDeriving
                     , PatternSynonyms
                     , FunctionalDependencies


executable BFComp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bfcomp
                     , process
  default-language:    Haskell2010
