name:                omega
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/omega#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , digits
                     , control-monad-omega
                     , containers
                     , MissingH
                     , vector
                     , persistent-vector
                     , directory
                     , hashtables
                     , hashable
                     -- , arrays
  default-language:    Haskell2010

executable omega-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , omega
  default-language:    Haskell2010

test-suite omega-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , omega
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/omega
