name:                turing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/turing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language, MuFuck, SmallFuck, Brainfuck, BoolFuck, ReversibleBrainfuck, ReversibleBitfuck, NanoFuck
                     , BfVars, Proc, Proc2, BFComp
                     -- , BFComp2
  build-depends:       base >= 4.7 && < 5
                     , mtl, containers, array
  default-language:    Haskell2010

executable turing-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turing
  default-language:    Haskell2010
